Fix alignment of topic link icon on comments page
This got a little off since I removed the top margin on it.

--- a/tildes/scss/modules/_topic.scss
+++ b/tildes/scss/modules/_topic.scss
@@ -262,6 +262,7 @@
 
 .topic-full-link {
   display: flex;
+  align-items: first baseline;
   word-break: break-all;
 }
 
